added my personal update

--- a/sds_newsletter_2025.qmd
+++ b/sds_newsletter_2025.qmd
@@ -116,13 +116,22 @@ Outside of the classroom, I've continued settling into life in the Valley by joi
 
 #### [Randi Garcia](https://www.randilgarcia.com/)
 
-My transition back to work and chairing SDS after my 2022-2023 parental leave was smooth.
-These past two years I taught SDS 290 Research Design and Analysis in SDS along with my course release for chairing.
-In psychology I taught PSY 202 Research Methods, PSY/SDS 364 Research Seminar in Intergroup Relationships twice, and in Spring 2025 I taught a brand new course PSY 274 Close Relationships which I will teach again in SPring 2026.
-I am excited to teach PSY 202 again in Fall 2025 and then SDS 100 for the first time in Spring 2026.
+My transition back to work after my 2022-2023 parental leave was smooth--although I jumped right into a three year term chairing SDS!
+Learning how to chair while being a working parent these past two years has been challenging, but rewarding.
+I also turned 40 last November, so I am also learning how to be middle-aged lol!
 
-Sarah Witkowski in the Exercise and Sport Studies department here at Smith on perimenopause symptoms, activity, and cardiovascular health.
-Began projects with Maya Rosen and Stephanie Jones.
+These past two years I taught SDS 290 Research Design and Analysis in SDS along with my course release for chairing.
+In psychology I taught PSY 202 Research Methods, PSY/SDS 364 Research Seminar in Intergroup Relationships twice, and in Spring 2025 I taught a brand new course, PSY 274 Close Relationships, which I will teach again in Spring 2026.
+It was a lot of fun and included topics such as communication; sexual intimacy; conflict and infidelity; and relationships across the lifespan.
+I am excited to teach PSY 202 again in Fall 2025 and then SDS 100 for the first time in Spring 2026!
+
+My research has also progressed since my return.
+I began collaborations with Sarah Witkowski and Stephanie Jones in the Exercise and Sport Studies department here at Smith.
+Prof Witkowski's work investigates on perimenopause symptoms, activity, and cardiovascular health while Prof Jones studies multiple sclerosis, somatosensory impairments, and fatigue.
+I have also begun a collaboration with Maya Rosen, Smith neuroscience professor, and Lizeth Sepulveda '26 investigating childhood executive functioning as a buffer against declines in mental health due to COVID-19 stressors.
+I have also continued working on research in my lab, wrapping up papers on the division of household labor, gatekeeping, and social dominance orientation with Meredith Zhang '23, as well as a paper on self-objectification in online learning contexts with Jessica Pardim Araujo '23.
+Last spring I had four Smith students in my research group, three are current SDS students Kayla Tillmon '27, Nora Zhou '26J, and Itzel Aleman Flores '27.
+I'm looking forward to continuing my research in the fall!
 
 #### Will Hopper
 
